# movie-env

./: Dockerfile  README.md  app.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
