[project]
name = "movie-env"
version = "1.0.0"
description = "Movie recommendation OpenEnv environment"
authors = [{ name = "Venkatesh" }]

dependencies = [
  "flask",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
